--- a/.github/workflows/buildbackend.yml
+++ b/.github/workflows/buildbackend.yml
@@ -25,5 +25,7 @@ jobs:
       # Build and push Docker image to GitHub Container Registry
       - name: Build and Push Docker Image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/projfabsoftbackend:${{ github.run_number }} ./fabsoft-backend
-          docker push ghcr.io/${{ github.repository }}/projfabsoftbackend:${{ github.run_number }}
+          LOWER_REPO=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          echo "Building image: ghcr.io/${LOWER_REPO}/projfabsoftbackend:${{ github.run_number }}"
+          docker build -t ghcr.io/${LOWER_REPO}/projfabsoftbackend:${{ github.run_number }} ./fabsoft-backend
+          docker push ghcr.io/${LOWER_REPO}/projfabsoftbackend:${{ github.run_number }}
